tests/spec/parse/snapshots/try_block_multiple_statements.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  fn test() {
    let result = try {
      let a = get_a()?;
      let b = get_b()?;
      a + b
    };
  }
---
[
    Function {
        doc: None,
        attributes: [],
        name: "test",
        name_span: Span {
            file_id: 0,
            byte_offset: 4,
            byte_length: 4,
        },
        generics: [],
        params: [],
        return_annotation: Unknown,
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Definition(
            Block {
                items: [
                    Let {
                        binding: Binding {
                            pattern: Identifier {
                                identifier: "result",
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 19,
                                    byte_length: 6,
                                },
                                binding: None,
                            },
                            annotation: None,
                            ty: Var {
                                id: uninferred,
                            },
                        },
                        value: TryBlock {
                            items: [
                                Let {
                                    binding: Binding {
                                        pattern: Identifier {
                                            identifier: "a",
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 42,
                                                byte_length: 1,
                                            },
                                            binding: None,
                                        },
                                        annotation: None,
                                        ty: Var {
                                            id: uninferred,
                                        },
                                    },
                                    value: Propagate {
                                        expression: Call {
                                            expression: Identifier {
                                                value: "get_a",
                                                ty: Var {
                                                    id: uninferred,
                                                },
                                                span: Span {
                                                    file_id: 0,
                                                    byte_offset: 46,
                                                    byte_length: 5,
                                                },
                                                resolution: Unresolved,
                                            },
                                            args: [],
                                            spread: None,
                                            type_arguments: None,
                                            ty: Var {
                                                id: uninferred,
                                            },
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 46,
                                                byte_length: 7,
                                            },
                                            call_kind: Unresolved,
                                        },
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 46,
                                            byte_length: 8,
                                        },
                                    },
                                    mode: Plain,
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 38,
                                        byte_length: 16,
                                    },
                                },
                                Let {
                                    binding: Binding {
                                        pattern: Identifier {
                                            identifier: "b",
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 64,
                                                byte_length: 1,
                                            },
                                            binding: None,
                                        },
                                        annotation: None,
                                        ty: Var {
                                            id: uninferred,
                                        },
                                    },
                                    value: Propagate {
                                        expression: Call {
                                            expression: Identifier {
                                                value: "get_b",
                                                ty: Var {
                                                    id: uninferred,
                                                },
                                                span: Span {
                                                    file_id: 0,
                                                    byte_offset: 68,
                                                    byte_length: 5,
                                                },
                                                resolution: Unresolved,
                                            },
                                            args: [],
                                            spread: None,
                                            type_arguments: None,
                                            ty: Var {
                                                id: uninferred,
                                            },
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 68,
                                                byte_length: 7,
                                            },
                                            call_kind: Unresolved,
                                        },
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 68,
                                            byte_length: 8,
                                        },
                                    },
                                    mode: Plain,
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 60,
                                        byte_length: 16,
                                    },
                                },
                                Binary {
                                    operator: Addition,
                                    left: Identifier {
                                        value: "a",
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 82,
                                            byte_length: 1,
                                        },
                                        resolution: Unresolved,
                                    },
                                    right: Identifier {
                                        value: "b",
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 86,
                                            byte_length: 1,
                                        },
                                        resolution: Unresolved,
                                    },
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 82,
                                        byte_length: 5,
                                    },
                                },
                            ],
                            ty: Var {
                                id: uninferred,
                            },
                            try_keyword_span: Span {
                                file_id: 0,
                                byte_offset: 28,
                                byte_length: 3,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 28,
                                byte_length: 63,
                            },
                        },
                        mode: Plain,
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 15,
                            byte_length: 76,
                        },
                    },
                ],
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 11,
                    byte_length: 83,
                },
            },
        ),
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 93,
        },
    },
]
