tests/spec/parse/snapshots/try_block_nested.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  fn test() {
    let outer = try {
      let inner = try {
        inner_risky()?
      };
      outer_risky()?
    };
  }
---
[
    Function {
        doc: None,
        attributes: [],
        name: "test",
        name_span: Span {
            file_id: 0,
            byte_offset: 4,
            byte_length: 4,
        },
        generics: [],
        params: [],
        return_annotation: Unknown,
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Definition(
            Block {
                items: [
                    Let {
                        binding: Binding {
                            pattern: Identifier {
                                identifier: "outer",
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 19,
                                    byte_length: 5,
                                },
                                binding: None,
                            },
                            annotation: None,
                            ty: Var {
                                id: uninferred,
                            },
                        },
                        value: TryBlock {
                            items: [
                                Let {
                                    binding: Binding {
                                        pattern: Identifier {
                                            identifier: "inner",
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 41,
                                                byte_length: 5,
                                            },
                                            binding: None,
                                        },
                                        annotation: None,
                                        ty: Var {
                                            id: uninferred,
                                        },
                                    },
                                    value: TryBlock {
                                        items: [
                                            Propagate {
                                                expression: Call {
                                                    expression: Identifier {
                                                        value: "inner_risky",
                                                        ty: Var {
                                                            id: uninferred,
                                                        },
                                                        span: Span {
                                                            file_id: 0,
                                                            byte_offset: 61,
                                                            byte_length: 11,
                                                        },
                                                        resolution: Unresolved,
                                                    },
                                                    args: [],
                                                    spread: None,
                                                    type_arguments: None,
                                                    ty: Var {
                                                        id: uninferred,
                                                    },
                                                    span: Span {
                                                        file_id: 0,
                                                        byte_offset: 61,
                                                        byte_length: 13,
                                                    },
                                                    call_kind: Unresolved,
                                                },
                                                ty: Var {
                                                    id: uninferred,
                                                },
                                                span: Span {
                                                    file_id: 0,
                                                    byte_offset: 61,
                                                    byte_length: 14,
                                                },
                                            },
                                        ],
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        try_keyword_span: Span {
                                            file_id: 0,
                                            byte_offset: 49,
                                            byte_length: 3,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 49,
                                            byte_length: 32,
                                        },
                                    },
                                    mode: Plain,
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 37,
                                        byte_length: 44,
                                    },
                                },
                                Propagate {
                                    expression: Call {
                                        expression: Identifier {
                                            value: "outer_risky",
                                            ty: Var {
                                                id: uninferred,
                                            },
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 87,
                                                byte_length: 11,
                                            },
                                            resolution: Unresolved,
                                        },
                                        args: [],
                                        spread: None,
                                        type_arguments: None,
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 87,
                                            byte_length: 13,
                                        },
                                        call_kind: Unresolved,
                                    },
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 87,
                                        byte_length: 14,
                                    },
                                },
                            ],
                            ty: Var {
                                id: uninferred,
                            },
                            try_keyword_span: Span {
                                file_id: 0,
                                byte_offset: 27,
                                byte_length: 3,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 27,
                                byte_length: 78,
                            },
                        },
                        mode: Plain,
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 15,
                            byte_length: 90,
                        },
                    },
                ],
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 11,
                    byte_length: 97,
                },
            },
        ),
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 107,
        },
    },
]
