tests/spec/parse/snapshots/try_block_with_control_flow.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  fn test() {
    let result = try {
      for i in items {
        if i > 10 {
          break;
        }
      };
      get_value()?
    };
  }
---
[
    Function {
        doc: None,
        attributes: [],
        name: "test",
        name_span: Span {
            file_id: 0,
            byte_offset: 4,
            byte_length: 4,
        },
        generics: [],
        params: [],
        return_annotation: Unknown,
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Definition(
            Block {
                items: [
                    Let {
                        binding: Binding {
                            pattern: Identifier {
                                identifier: "result",
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 19,
                                    byte_length: 6,
                                },
                                binding: None,
                            },
                            annotation: None,
                            ty: Var {
                                id: uninferred,
                            },
                        },
                        value: TryBlock {
                            items: [
                                For {
                                    binding: Binding {
                                        pattern: Identifier {
                                            identifier: "i",
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 42,
                                                byte_length: 1,
                                            },
                                            binding: None,
                                        },
                                        annotation: None,
                                        ty: Var {
                                            id: uninferred,
                                        },
                                    },
                                    iterable: Identifier {
                                        value: "items",
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 47,
                                            byte_length: 5,
                                        },
                                        resolution: Unresolved,
                                    },
                                    body: Block {
                                        items: [
                                            If {
                                                condition: Binary {
                                                    operator: GreaterThan,
                                                    left: Identifier {
                                                        value: "i",
                                                        ty: Var {
                                                            id: uninferred,
                                                        },
                                                        span: Span {
                                                            file_id: 0,
                                                            byte_offset: 64,
                                                            byte_length: 1,
                                                        },
                                                        resolution: Unresolved,
                                                    },
                                                    right: Literal {
                                                        literal: Integer {
                                                            value: 10,
                                                            text: None,
                                                        },
                                                        ty: Var {
                                                            id: uninferred,
                                                        },
                                                        span: Span {
                                                            file_id: 0,
                                                            byte_offset: 68,
                                                            byte_length: 2,
                                                        },
                                                    },
                                                    ty: Var {
                                                        id: uninferred,
                                                    },
                                                    span: Span {
                                                        file_id: 0,
                                                        byte_offset: 64,
                                                        byte_length: 6,
                                                    },
                                                },
                                                consequence: Block {
                                                    items: [
                                                        Break {
                                                            value: None,
                                                            span: Span {
                                                                file_id: 0,
                                                                byte_offset: 81,
                                                                byte_length: 5,
                                                            },
                                                        },
                                                    ],
                                                    ty: Var {
                                                        id: uninferred,
                                                    },
                                                    span: Span {
                                                        file_id: 0,
                                                        byte_offset: 71,
                                                        byte_length: 24,
                                                    },
                                                },
                                                alternative: None,
                                                ty: Var {
                                                    id: uninferred,
                                                },
                                                span: Span {
                                                    file_id: 0,
                                                    byte_offset: 61,
                                                    byte_length: 34,
                                                },
                                            },
                                        ],
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 53,
                                            byte_length: 48,
                                        },
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 38,
                                        byte_length: 63,
                                    },
                                },
                                Propagate {
                                    expression: Call {
                                        expression: Identifier {
                                            value: "get_value",
                                            ty: Var {
                                                id: uninferred,
                                            },
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 107,
                                                byte_length: 9,
                                            },
                                            resolution: Unresolved,
                                        },
                                        args: [],
                                        spread: None,
                                        type_arguments: None,
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 107,
                                            byte_length: 11,
                                        },
                                        call_kind: Unresolved,
                                    },
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 107,
                                        byte_length: 12,
                                    },
                                },
                            ],
                            ty: Var {
                                id: uninferred,
                            },
                            try_keyword_span: Span {
                                file_id: 0,
                                byte_offset: 28,
                                byte_length: 3,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 28,
                                byte_length: 95,
                            },
                        },
                        mode: Plain,
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 15,
                            byte_length: 108,
                        },
                    },
                ],
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 11,
                    byte_length: 115,
                },
            },
        ),
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 125,
        },
    },
]
